--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -422,6 +422,26 @@ tasks:
         resource.labels.service_name:label=SERVICE, severity, textPayload, \
         jsonPayload.event:label=MESSAGE)" --order=asc
 
+  staging:debug:on:
+    desc: "Enable DEBUG log level for all staging services"
+    cmds:
+      - echo "⚙️ Setting LOG_LEVEL=DEBUG for staging services..."
+      - gcloud run services update paperterrace-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=DEBUG,ACCESS_LOG_LEVEL=DEBUG
+      - gcloud run services update paperterrace-inference-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=DEBUG
+
+  staging:debug:off:
+    desc: "Restore INFO log level for all staging services"
+    cmds:
+      - echo "⚙️ Setting LOG_LEVEL=INFO for staging services..."
+      - gcloud run services update paperterrace-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=INFO,ACCESS_LOG_LEVEL=INFO
+      - gcloud run services update paperterrace-inference-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=INFO
+
+  staging:logs:debug:
+    desc: "Tail all staging logs in real-time (includes DEBUG)"
+    cmds:
+      - echo "📋 Tailing all staging logs (Ctrl+C to stop)..."
+      - gcloud logging tail 'resource.type="cloud_run_revision" AND (resource.labels.service_name="paperterrace-staging" OR resource.labels.service_name="paperterrace-inference-staging")' --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, resource.labels.service_name:label=SERVICE, severity, jsonPayload.event:label=MESSAGE, textPayload)"
+
   staging:urls:
     desc: "Show staging service URLs"
     cmds:
