--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "uvicorn[standard]>=0.32.1",
     "pydantic>=2.10.4",
     "python-multipart>=0.0.9",
-    "httpx>=0.27.0",
+    "httpx[http2]>=0.27.0",
     "jinja2>=3.1.6",
     
     # Google Cloud & AI
