feat: Implement batch image analysis endpoint with GZip compression and integrate it into lazy layout analysis, utilizing JPEG compression for image transfer.

--- a/inference-service/.env.example
+++ b/inference-service/.env.example
@@ -14,6 +14,16 @@ ORT_INTER_THREADS=2
 CT2_INTER_THREADS=1
 CT2_INTRA_THREADS=4
 
+# バッチ処理設定
+# 並列ワーカー数（デフォルト: CPU数）
+# CPU2コア環境では2を推奨
+BATCH_PARALLEL_WORKERS=2
+
+# レート制限設定
+RATE_LIMIT_LAYOUT=60/minute
+RATE_LIMIT_LAYOUT_BATCH=20/minute
+RATE_LIMIT_TRANSLATE=300/minute
+
 # モデルパス
 LAYOUT_MODEL_PATH=models/layout_m.onnx
 LOCAL_MODEL_PATH=models/m2m100_ct2
