--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -227,7 +227,8 @@ tasks:
           --max-instances 20 \
           --concurrency 80 \
           --timeout 300 \
-          --set-env-vars "GEMINI_API_KEY=${GEMINI_API_KEY},AI_PROVIDER=gemini,OCR_MODEL=gemini-1.5-flash,LOG_LEVEL=INFO,ACCESS_LOG_LEVEL=INFO,INFERENCE_SERVICE_URL=$SERVICEB_URL,INFERENCE_SERVICE_TIMEOUT=30,SKIP_INFERENCE_SERVICE_WARMUP=false,STORAGE_TYPE=gcs,GCS_BUCKET_NAME=paperterrace-papers"
+          --set-secrets "GEMINI_API_KEY=GEMINI_API_KEY:latest,FIREBASE_API_KEY=FIREBASE_API_KEY:latest,FIREBASE_AUTH_DOMAIN=FIREBASE_AUTH_DOMAIN:latest,FIREBASE_PROJECT_ID=FIREBASE_PROJECT_ID:latest,FIREBASE_STORAGE_BUCKET=FIREBASE_STORAGE_BUCKET:latest,FIREBASE_MESSAGING_SENDER_ID=FIREBASE_MESSAGING_SENDER_ID:latest,FIREBASE_APP_ID=FIREBASE_APP_ID:latest,FIREBASE_MEASUREMENT_ID=FIREBASE_MEASUREMENT_ID:latest" \
+          --set-env-vars "AI_PROVIDER=gemini,OCR_MODEL=gemini-1.5-flash,LOG_LEVEL=INFO,ACCESS_LOG_LEVEL=INFO,INFERENCE_SERVICE_URL=$SERVICEB_URL,INFERENCE_SERVICE_TIMEOUT=30,SKIP_INFERENCE_SERVICE_WARMUP=false,STORAGE_TYPE=gcs,GCS_BUCKET_NAME=paperterrace-papers"
       - echo "✅ Backend deployed to staging!"
       - task: staging:urls
 
