feat: Implement PDF click mode, refine AI provider configuration, and update storage permissions for Vertex AI.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -58,9 +58,10 @@ vars:
     }
 
   # Staging Deployment Variables
-  STG_SECRET_ENV: "GEMINI_API_KEY=GEMINI_API_KEY:latest,FIREBASE_API_KEY=FIREBASE_API_KEY:latest,FIREBASE_AUTH_DOMAIN=FIREBASE_AUTH_DOMAIN:latest,FIREBASE_PROJECT_ID=FIREBASE_PROJECT_ID:latest,FIREBASE_STORAGE_BUCKET=FIREBASE_STORAGE_BUCKET:latest,FIREBASE_MESSAGING_SENDER_ID=FIREBASE_MESSAGING_SENDER_ID:latest,FIREBASE_APP_ID=FIREBASE_APP_ID:latest,FIREBASE_MEASUREMENT_ID=FIREBASE_MEASUREMENT_ID:latest"
+  # Staging Deployment Variables
+  STG_SECRET_ENV: "GEMINI_API_KEY=GEMINI_API_KEY:latest,FIREBASE_API_KEY=FIREBASE_API_KEY:latest,FIREBASE_AUTH_DOMAIN=FIREBASE_AUTH_DOMAIN:latest,FIREBASE_PROJECT_ID=FIREBASE_PROJECT_ID:latest,FIREBASE_STORAGE_BUCKET=FIREBASE_STORAGE_BUCKET:latest,FIREBASE_MESSAGING_SENDER_ID=FIREBASE_MESSAGING_SENDER_ID:latest,FIREBASE_APP_ID=FIREBASE_APP_ID:latest,FIREBASE_MEASUREMENT_ID=FIREBASE_MEASUREMENT_ID:latest,/secrets/sa-key=paperterrace-sa-key:latest"
 
-  STG_BE_ENV_VARS: 'AI_PROVIDER={{.AI_PROVIDER | default "gemini"}},OCR_MODEL={{.OCR_MODEL | default "gemini-1.5-flash"}},LOG_LEVEL={{.LOG_LEVEL | default "INFO"}},ACCESS_LOG_LEVEL={{.ACCESS_LOG_LEVEL | default "INFO"}},INFERENCE_SERVICE_TIMEOUT={{.INFERENCE_SERVICE_TIMEOUT | default "200"}},SKIP_INFERENCE_SERVICE_WARMUP={{.SKIP_INFERENCE_SERVICE_WARMUP | default "false"}},STORAGE_TYPE={{.STORAGE_TYPE | default "gcs"}},GCS_BUCKET_NAME={{.GCS_BUCKET_NAME | default "paperterrace-papers"}}'
+  STG_BE_ENV_VARS: 'AI_PROVIDER={{.AI_PROVIDER | default "gemini"}},OCR_MODEL={{.OCR_MODEL | default "gemini-1.5-flash"}},LOG_LEVEL={{.LOG_LEVEL | default "INFO"}},ACCESS_LOG_LEVEL={{.ACCESS_LOG_LEVEL | default "INFO"}},INFERENCE_SERVICE_TIMEOUT={{.INFERENCE_SERVICE_TIMEOUT | default "200"}},SKIP_INFERENCE_SERVICE_WARMUP={{.SKIP_INFERENCE_SERVICE_WARMUP | default "false"}},STORAGE_TYPE={{.STORAGE_TYPE | default "gcs"}},GCS_BUCKET_NAME={{.GCS_BUCKET_NAME | default "paperterrace-papers"}},GOOGLE_APPLICATION_CREDENTIALS=/secrets/sa-key'
 
   STG_INF_ENV_VARS: 'LOG_LEVEL={{.LOG_LEVEL | default "INFO"}},DEV_MODE=false,SKIP_MODEL_LOADING=false,LOCAL_MODEL_PATH={{.LOCAL_MODEL_PATH | default "/app/models/m2m100_ct2"}},TRANSLATION_BEAM_SIZE={{.TRANSLATION_BEAM_SIZE | default "5"}},TRANSLATION_REPETITION_PENALTY={{.TRANSLATION_REPETITION_PENALTY | default "1.4"}},TRANSLATION_NO_REPEAT_NGRAM_SIZE={{.TRANSLATION_NO_REPEAT_NGRAM_SIZE | default "3"}},LAYOUT_THRESHOLD={{.LAYOUT_THRESHOLD | default 0.9}},BATCH_PARALLEL_WORKERS={{.INF_STG_WORKERS}}'
 
@@ -239,6 +240,7 @@ tasks:
           --image {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging \
           --region {{.REGION}} \
           --allow-unauthenticated \
+          --service-account paperterrace-sa@{{.PROJECT_ID}}.iam.gserviceaccount.com \
           --memory {{.BE_STG_MEM}} \
           --cpu {{.BE_STG_CPU}} \
           --min-instances {{.BE_STG_MIN_INSTANCES}} \
