--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches: ["**"]
   pull_request:
-    branches: [main, master]
+    branches: ["**"]
 
 jobs:
-  lint:
+  backend-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,18 +20,15 @@ jobs:
       - name: Set up Python
         run: uv python install 3.12
 
-      - name: Install dependencies
-        run: uv sync --dev
+      - name: Run ruff check
+        run: uv run --directory backend ruff check .
 
-      - name: Run ruff linter
-        run: uv run ruff check src/
+      - name: Run ruff format check
+        run: uv run --directory backend ruff format --check .
 
-      - name: Run ruff formatter check
-        run: uv run ruff format --check src/
-
-  test:
+  backend-test:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: backend-lint
     steps:
       - uses: actions/checkout@v4
 
@@ -42,31 +39,30 @@ jobs:
 
       - name: Set up Python
         run: uv python install 3.12
-
-      - name: Install dependencies
-        run: uv sync --dev
 
       - name: Run tests
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY || 'test-key' }}
           DB_PATH: ":memory:"
-        run: uv run pytest tests/ -v --tb=short
+          AI_PROVIDER: "mock"
+        run: uv run --directory backend pytest
 
-  type-check:
+  frontend-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          version: "latest"
-
-      - name: Set up Python
-        run: uv python install 3.12
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: uv sync --dev
+        working-directory: frontend
+        run: npm ci
 
-      - name: Run type checker
-        run: uv run ty check src/ || true  # ty may not be available
+      - name: Run lint
+        working-directory: frontend
+        run: npm run lint
