feat: Implement Kubernetes Kustomize deployment for backend services and standardize Redis caching with a dedicated provider.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -41,6 +41,7 @@ COPY backend/alembic.ini ./
 COPY backend/migrations ./migrations
 COPY backend/app/ ./app/
 COPY common/ ./common/
+COPY redis_provider.provider/ ./redis_provider.provider/
 
 ENV PATH="/app/.venv/bin:$PATH" \
     PYTHONPATH="/app" \
