--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -139,18 +139,60 @@ tasks:
       - npm run build
     dir: frontend
 
-  test:
+  test:backend:
     desc: "Run backend tests"
     cmds:
-      - uv run --directory backend env PYTHONPATH=.:.. pytest
+      - uv run --directory backend env PYTHONPATH=.:.. pytest -n auto --testmon
+
+  test:inference:
+    desc: "Run inference service tests"
+    cmds:
+      - uv run --directory inference-service env PYTHONPATH=.:.. pytest -n auto --testmon
+
+  test:redis:
+    desc: "Run redis provider tests"
+    cmds:
+      - uv run --directory redis_provider env PYTHONPATH=.:.. pytest --testmon
+
+  test:frontend:
+    desc: "Run frontend tests (Vitest)"
+    cmds:
+      - cd frontend && npm run test
+
+  test:
+    desc: "Run affected tests for all components (Optimized)"
+    cmds:
+      - task: test:backend
+      - task: test:inference
+      - task: test:redis
+      - task: test:frontend
+
+  test:all:
+    desc: "Run all tests for all components"
+    cmds:
+      - uv run --directory backend env PYTHONPATH=.:.. pytest -n auto
+      - uv run --directory inference-service env PYTHONPATH=.:.. pytest -n auto
+      - uv run --directory redis_provider env PYTHONPATH=.:.. pytest
+      - cd frontend && npm run test
 
   lint:
-    desc: "Run linting and formatting"
+    desc: "Run linting and formatting for all components"
     cmds:
       - echo "🔍 Running backend linting..."
       - uv run --directory backend ruff check --fix .
+      - echo "🔍 Running inference-service linting..."
+      - uv run --directory inference-service ruff check --fix .
+      - echo "🔍 Running common & shared linting..."
+      - uv run ruff check --fix common redis_provider
       - echo "🔍 Running frontend linting..."
       - cd frontend && npm run lint
+
+  test:all:
+    desc: "Run tests for all components"
+    deps: [test]
+    cmds:
+      - echo "Checking for other component tests..."
+      # Add other component tests here as they are created
 
   clean:
     desc: "Clean cache and temporary files"
