--- a/inference-service/.env.example
+++ b/inference-service/.env.example
@@ -27,3 +27,14 @@ RATE_LIMIT_TRANSLATE=300/minute
 # モデルパス
 LAYOUT_MODEL_PATH=models/layout_m.onnx
 LOCAL_MODEL_PATH=models/m2m100_ct2
+# Llama-cpp (LLM) 設定
+LLAMACPP_REPO_ID=byteshape/Qwen3-30B-A3B-Instruct-2507-GGUF
+LLAMACPP_FILENAME=Q3_K_S-2.66bow
+# LLAMACPP_MODEL_PATH=models/qwen.gguf # ローカルファイルを使用する場合
+LLAMACPP_CTX_SIZE=4096
+LLAMACPP_THREADS=4
+LLAMACPP_GPU_LAYERS=0
+
+# Llama-cpp (LLM) 最適化設定 (Intel i7-9750H用)
+LLAMACPP_THREADS=4
+LLAMACPP_BATCH_SIZE=512
