--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -15,7 +15,6 @@ dependencies = [
     "opencv-python-headless>=4.13.0.92",
     "onnx-graphsurgeon>=0.5.8",
     "slowapi>=0.1.9",
-
     "fastapi>=0.128.0",
     "uvicorn[standard]>=0.32.1",
     "pydantic>=2.10.4",
@@ -26,6 +25,7 @@ dependencies = [
     "structlog>=24.1.0",
     "chardet>=5.2.0",
     "python-dotenv>=1.0.1",
+    "llama-cpp-python>=0.3.16",
 ]
 
 [dependency-groups]
