--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:ui": "vitest --ui",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "wrangler pages deploy ./dist"
 	},
 	"keywords": [],
 	"author": "",
