--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "chardet>=5.2.0",
     "python-dotenv>=1.0.1",
     "llama-cpp-python>=0.3.16",
+    "huggingface-hub>=0.20.0",
 ]
 
 [dependency-groups]
