feat: Implement OpenVINO-based layout detection service with image preprocessing and enhanced document storage capabilities.

--- a/.dockerignore
+++ b/.dockerignore
@@ -42,6 +42,12 @@ terraform/
 .agent/
 plans/
 frontend/node_modules/
+# Models
 /models/
+**/models/
+*.onnx
+*.xml
+*.bin
+*.blob
 docs/
 backend/app/static/dist/
