--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 	"license": "ISC",
 	"type": "module",
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.19",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.2",
 		"@types/node": "^25.0.10",
