--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ctranslate2>=4.4.0",
     "sentencepiece>=0.2.0",
     "onnxruntime>=1.23.2",
+    "openvino>=2024.0.0",
     "opencv-python-headless>=4.13.0.92",
     "onnx-graphsurgeon>=0.5.8",
     "slowapi>=0.1.9",
