--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-	"name": "paperterrace-frontend",
+	"name": "paperterrace",
 	"compatibility_date": "2026-02-22",
 	"assets": {
 		"directory": "./dist"
