--- a/cloudflare-workers/package.json
+++ b/cloudflare-workers/package.json
@@ -10,18 +10,22 @@
     "test": "vitest",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["cloudflare", "workers", "api-gateway"],
+  "keywords": [
+    "cloudflare",
+    "workers",
+    "api-gateway"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^13.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240129.0",
-    "@types/node": "^20.11.0",
-    "esbuild": "^0.20.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.0",
-    "wrangler": "^3.25.0"
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@types/node": "^22.13.4",
+    "esbuild": "^0.25.0",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5",
+    "wrangler": "^4.67.0"
   }
 }
