--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 50",
-		"lint:fix": "eslint . --ext ts,tsx --fix",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:ui": "vitest --ui",
@@ -18,39 +18,47 @@
 	"license": "ISC",
 	"type": "module",
 	"devDependencies": {
+		"@eslint/config-array": "^0.23.0",
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.14.0",
+		"@jridgewell/sourcemap-codec": "^1.5.0",
+		"@rollup/plugin-inject": "^5.0.0",
 		"@tailwindcss/typography": "^0.5.19",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.2",
-		"@types/node": "^25.0.10",
+		"@types/node": "^22.0.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.18.0",
-		"@typescript-eslint/parser": "^7.18.0",
+		"@typescript-eslint/eslint-plugin": "^8.24.0",
+		"@typescript-eslint/parser": "^8.24.0",
 		"@vitejs/plugin-react": "^4.3.1",
-		"@vitest/ui": "^4.0.18",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.1",
-		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-react-refresh": "^0.4.7",
-		"jsdom": "^28.1.0",
-		"postcss": "^8.4.38",
+		"@vitest/ui": "^3.0.5",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.14.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.18",
+		"globals": "^15.14.0",
+		"glob": "^8.1.0",
+		"jsdom": "^26.0.0",
+		"postcss": "^8.5.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.2.2",
-		"vite": "^5.3.1",
-		"vitest": "^4.0.18"
+		"rimraf": "^4.0.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.1.0",
+		"typescript-eslint": "^8.24.0",
+		"vite": "^5.4.0",
+		"vitest": "^3.0.5"
 	},
 	"description": "",
 	"dependencies": {
-		"@types/uuid": "^11.0.0",
 		"dexie": "^4.3.0",
 		"dexie-react-hooks": "^4.2.0",
-		"firebase": "^12.8.0",
-		"i18next": "^25.8.0",
+		"firebase": "^11.3.0",
+		"i18next": "^25.1.4",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"i18next-http-backend": "^3.0.2",
 		"react-i18next": "^16.5.4",
-		"uuid": "^13.0.0"
+		"uuid": "^11.0.5"
 	}
 }
