--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-	"name": "paperterrace-root",
-	"private": true,
-	"scripts": {
-		"lint": "biome lint .",
-		"format": "biome format --write .",
-		"check": "biome check --write ."
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.4.4"
-	}
+  "name": "paperterrace-root",
+  "private": true,
+  "scripts": {
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check --write ."
+  },
+  "workspaces": [
+    "frontend",
+    "cloudflare-workers"
+  ],
+  "devDependencies": {
+    "@biomejs/biome": "^2.4.4"
+  },
+  "overrides": {
+    "undici": "^6.23.0",
+    "minimatch": "^9.0.5",
+    "glob": "^10.4.5",
+    "rimraf": "^5.0.10"
+  }
 }
