--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -47,12 +47,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "ruff>=0.4.0",
-    "ty>=0.0.13",
+    "pyright>=1.1.408",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-testmon>=2.2.0",
+    "pytest-xdist>=3.6.1",
+    "ruff>=0.15.0",
+    "ty>=0.0.15",
     "unidic-lite>=1.0.8",
-    "pyright>=1.1.390",
     "git-filter-repo>=2.47.0",
 ]
 
