--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -32,7 +32,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "ruff>=0.4.0",
+    "pyright>=1.1.408",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-testmon>=2.2.0",
+    "pytest-xdist>=3.6.1",
+    "ruff>=0.15.0",
+    "ty>=0.0.15",
 ]
