--- a/redis_provider/pyproject.toml
+++ b/redis_provider/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Shared Redis Provider for PaperTerrace"
 dependencies = [
     "redis>=5.0.0",
+    "structlog>=24.1.0",
 ]
 requires-python = ">=3.12"
 
@@ -13,3 +14,16 @@ packages = ["."]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pyright>=1.1.408",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-testmon>=2.2.0",
+    "pytest-xdist>=3.6.1",
+    "ruff>=0.15.0",
+    "ty>=0.0.15",
+    "unidic-lite>=1.0.8",
+    "git-filter-repo>=2.47.0",
+]
