--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -69,3 +69,6 @@ root = [".", "./app"]
 
 [tool.uv.sources]
 en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
+
+[tool.pytest.ini_options]
+addopts = "--testmon"
